# PFEE

./: .env.example  .gitignore  Makefile  PLAN_ACTION.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/agents/: diagnostic_agent.py  llm_provider.py
backend/app/api/v1/: agent.py  alarms.py  energy.py  health.py  points.py  sites.py
backend/app/connectors/: niagara_client.py
backend/app/core/: config.py  database.py  logging.py
backend/app/models/: gtb.py
backend/app/rag/: pipeline.py
backend/app/services/: prioritization.py  rules_engine.py  weather_service.py
backend/scripts/: seed_demo_data.py
backend/tests/: test_prioritization.py
docs/: architecture.md  cartographie_points_gtb.md  integration_niagara_benchmark.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/pages/: Chatbot.tsx  Dashboard.tsx
frontend/src/services/: apiClient.ts
frontend/src/types/: api.ts
infra/docker/: backend.Dockerfile  frontend.Dockerfile
infra/nginx/: nginx.conf
infra/sql/: 01_timescale_schema.sql
