[project]
name = "coach-ia-gtb-backend"
version = "0.1.0"
description = "Coach IA GTB — Backend FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.13.3",
    "psycopg2-binary>=2.9.10",
    # Auth & security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # HTTP client
    "httpx>=0.27.2",
    "websockets>=13.1",
    # AI / RAG
    "mistralai>=1.2.0",
    "google-generativeai>=0.8.3",
    "llama-index>=0.12.0",
    "llama-index-vector-stores-chroma>=0.4.0",
    "llama-index-embeddings-huggingface>=0.4.0",
    "chromadb>=0.5.20",
    "sentence-transformers>=3.3.0",
    # Caching
    "redis>=5.2.0",
    # Data
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "pyyaml>=6.0.2",
    # Observability
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.4",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "httpx>=0.27.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP", "S", "A", "C4", "T20"]
ignore = ["S101"] # allow assert in tests

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
